--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
       - name: Set up pkgx environment
         uses: pkgxdev/setup@v1
         with:
-          +: xcodes
+          +: fastlane pod xcodes
 
       - name: Set environment variables
         run: echo "SKIP_SLOW_FASTLANE_WARNING=1" >> $GITHUB_ENV
