--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,9 +57,9 @@ jobs:
             os: macos-13
             xcode: 14.3.1
           - platform: [iOS, 17]
-            runtime: iOS 17.0
-            os: macos-13
-            xcode: 15.0.1
+            runtime: iOS 17.5
+            os: macos-14
+            xcode: 15.4
 
           - platform: [tvOS, 13]
             runtime: tvOS 13.4
@@ -81,9 +81,9 @@ jobs:
             os: macos-13
             xcode: 15.0.1
           - platform: [tvOS, 17]
-            runtime: tvOS 17.0
-            os: macos-13
-            xcode: 15.0.1
+            runtime: tvOS 17.5
+            os: macos-14
+            xcode: 15.4
 
           - platform: [watchOS, 7]
             runtime: watchOS 7.4
@@ -100,9 +100,9 @@ jobs:
             os: macos-13
             xcode: 14.3.1
           - platform: [watchOS, 10]
-            runtime: watchOS 10.0
-            os: macos-13
-            xcode: 15.0.1
+            runtime: watchOS 10.5
+            os: macos-14
+            xcode: 15.4
 
           - platform: [macOS, 12]
             runtime: macOS 12
@@ -112,6 +112,10 @@ jobs:
             runtime: macOS 13
             os: macos-13
             xcode: 15.0.1
+          - platform: [macOS, 14]
+            runtime: macOS 14
+            os: macos-14
+            xcode: 15.4
 
           # FIXME: this currently hangs on CI
           # - platform: [visionos, 1]
