--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
           max_attempts: 3
           command: sudo xcodes runtimes install '${{ matrix.runtime }}'
 
-      - if: false
+      - if: true
         name: "[Debug] List Available Runtimes, Simulators, and Destinations"
         run: |
           xcrun simctl list
