--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,8 @@ jobs:
             install: true
           - platform: [iOS, 14]
             runtime: iOS 14.5
-            os: macos-13
-            xcode: 14.3.1
+            os: macos-12
+            xcode: 14.2
             install: true
           - platform: [iOS, 15]
             runtime: iOS 15.5
@@ -68,8 +68,8 @@ jobs:
             install: true
           - platform: [tvOS, 14]
             runtime: tvOS 14.5
-            os: macos-13
-            xcode: 14.3.1
+            os: macos-12
+            xcode: 14.2
             install: true
           - platform: [tvOS, 15]
             runtime: tvOS 15.4
@@ -112,10 +112,10 @@ jobs:
             runtime: macOS 13
             os: macos-13
             xcode: 15.0.1
-          - platform: [macOS, 14]
-            runtime: macOS 14
-            os: macos-14
-            xcode: 15.4
+          # - platform: [macOS, 14]
+          #   runtime: macOS 14
+          #   os: macos-14
+          #   xcode: 15.4
 
           # FIXME: this currently hangs on CI
           # - platform: [visionos, 1]
