--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,12 +117,10 @@ jobs:
           #   os: macos-14
           #   xcode: 15.4
 
-          # FIXME: this currently hangs on CI
-          # - platform: [visionos, 1]
-          #   runtime: visionOS 1.0-beta2
-          #   os: macos-13
-          #   xcode: 15.0
-          #   install: true
+          - platform: [visionOS, 1]
+            runtime: visionOS 1.2
+            os: macos-14
+            xcode: 15.4
     steps:
       - name: Git Checkout
         uses: actions/checkout@v4
@@ -134,6 +132,11 @@ jobs:
 
       - name: Set environment variables
         run: echo "SKIP_SLOW_FASTLANE_WARNING=1" >> $GITHUB_ENV
+
+      - if: ${{ matrix.platform[0] == 'visionOS' }}
+        run: |
+          defaults write com.apple.dt.Xcode AllowUnsupportedVisionOSHost -bool YES
+          defaults write com.apple.CoreSimulator AllowUnsupportedVisionOSHost -bool YES
 
       - name: Select Xcode version
         run: sudo xcodes select ${{ matrix.xcode }}
