--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,81 +37,81 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: [iOS, 13]
-            runtime: iOS 13.7
-            os: macos-12
-            xcode: 14.2
-            install: true
-          - platform: [iOS, 14]
-            runtime: iOS 14.5
-            os: macos-12
-            xcode: 14.2
-            install: true
-          - platform: [iOS, 15]
-            runtime: iOS 15.5
-            os: macos-13
-            xcode: 15.0.1
-            install: true
-          - platform: [iOS, 16]
-            runtime: iOS 16.4
-            os: macos-13
-            xcode: 14.3.1
-          - platform: [iOS, 17]
-            runtime: iOS 17.5
-            os: macos-14
-            xcode: 15.4
+          # - platform: [iOS, 13]
+          #   runtime: iOS 13.7
+          #   os: macos-12
+          #   xcode: 14.2
+          #   install: true
+          # - platform: [iOS, 14]
+          #   runtime: iOS 14.5
+          #   os: macos-12
+          #   xcode: 14.2
+          #   install: true
+          # - platform: [iOS, 15]
+          #   runtime: iOS 15.5
+          #   os: macos-13
+          #   xcode: 15.0.1
+          #   install: true
+          # - platform: [iOS, 16]
+          #   runtime: iOS 16.4
+          #   os: macos-13
+          #   xcode: 14.3.1
+          # - platform: [iOS, 17]
+          #   runtime: iOS 17.5
+          #   os: macos-14
+          #   xcode: 15.4
 
-          - platform: [tvOS, 13]
-            runtime: tvOS 13.4
-            os: macos-12
-            xcode: 14.2
-            install: true
-          - platform: [tvOS, 14]
-            runtime: tvOS 14.5
-            os: macos-12
-            xcode: 14.2
-            install: true
-          - platform: [tvOS, 15]
-            runtime: tvOS 15.4
-            os: macos-13
-            xcode: 15.0.1
-            install: true
-          - platform: [tvOS, 16]
-            runtime: tvOS 16.4
-            os: macos-13
-            xcode: 15.0.1
-          - platform: [tvOS, 17]
-            runtime: tvOS 17.5
-            os: macos-14
-            xcode: 15.4
+          # - platform: [tvOS, 13]
+          #   runtime: tvOS 13.4
+          #   os: macos-12
+          #   xcode: 14.2
+          #   install: true
+          # - platform: [tvOS, 14]
+          #   runtime: tvOS 14.5
+          #   os: macos-12
+          #   xcode: 14.2
+          #   install: true
+          # - platform: [tvOS, 15]
+          #   runtime: tvOS 15.4
+          #   os: macos-13
+          #   xcode: 15.0.1
+          #   install: true
+          # - platform: [tvOS, 16]
+          #   runtime: tvOS 16.4
+          #   os: macos-13
+          #   xcode: 15.0.1
+          # - platform: [tvOS, 17]
+          #   runtime: tvOS 17.5
+          #   os: macos-14
+          #   xcode: 15.4
 
           - platform: [watchOS, 7]
             runtime: watchOS 7.4
             os: macos-12
             xcode: 14.2
             install: true
-          - platform: [watchOS, 8]
-            runtime: watchOS 8.5
-            os: macos-13
-            xcode: 15.0.1
-            install: true
-          - platform: [watchOS, 9]
-            runtime: watchOS 9.4
-            os: macos-13
-            xcode: 14.3.1
-          - platform: [watchOS, 10]
-            runtime: watchOS 10.5
-            os: macos-14
-            xcode: 15.4
+          # - platform: [watchOS, 8]
+          #   runtime: watchOS 8.5
+          #   os: macos-13
+          #   xcode: 15.0.1
+          #   install: true
+          # - platform: [watchOS, 9]
+          #   runtime: watchOS 9.4
+          #   os: macos-13
+          #   xcode: 14.3.1
+          # - platform: [watchOS, 10]
+          #   runtime: watchOS 10.5
+          #   os: macos-14
+          #   xcode: 15.4
 
-          - platform: [macOS, 12]
-            runtime: macOS 12
-            os: macos-12
-            xcode: 14.2
-          - platform: [macOS, 13]
-            runtime: macOS 13
-            os: macos-13
-            xcode: 15.0.1
+          # - platform: [macOS, 12]
+          #   runtime: macOS 12
+          #   os: macos-12
+          #   xcode: 14.2
+          # - platform: [macOS, 13]
+          #   runtime: macOS 13
+          #   os: macos-13
+          #   xcode: 15.0.1
           # - platform: [macOS, 14]
           #   runtime: macOS 14
           #   os: macos-14
