--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,20 @@ concurrency:
 jobs:
   lint-podspec:
     name: Lint Podspec
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - name: Git Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # required to be able to find Git tags
+
+      - name: Set up pkgx environment
+        uses: pkgxdev/setup@v1
+        with:
+          +: pod xcodes
+
+      - name: Select Xcode version
+        run: sudo xcodes select 15.4
 
       - name: Lint Podspec
         run: |
