--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,10 @@ jobs:
             runtime: visionOS 1.2
             os: macos-14
             xcode: 15.4
+          - platform: [visionOS, 2]
+            runtime: visionOS 2.0
+            os: macos-14
+            xcode: 16.0
     steps:
       - name: Git Checkout
         uses: actions/checkout@v4
