--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,10 @@ jobs:
             runtime: macOS 14
             os: macos-14
             xcode: 15.4
+          - platform: [macOS, 15]
+            runtime: macOS 15
+            os: macos-15
+            xcode: 16.2
 
           - platform: [visionOS, 1]
             runtime: visionOS 1.2
