--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,18 +42,19 @@ jobs:
         include:
           - platform: [iOS, 15]
             runtime: iOS 15.5
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
             install: true
           - platform: [iOS, 16]
             runtime: iOS 16.4
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
             install: true
           - platform: [iOS, 17]
             runtime: iOS 17.5
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
+            install: true
           - platform: [iOS, 18]
             runtime: iOS 18.5
             os: macos-15
@@ -65,18 +66,19 @@ jobs:
 
           - platform: [tvOS, 15]
             runtime: tvOS 15.4
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
             install: true
           - platform: [tvOS, 16]
             runtime: tvOS 16.4
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
             install: true
           - platform: [tvOS, 17]
             runtime: tvOS 17.5
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
+            install: true
           - platform: [tvOS, 18]
             runtime: tvOS 18.5
             os: macos-15
@@ -88,18 +90,19 @@ jobs:
 
           - platform: [watchOS, 8]
             runtime: watchOS 8.5
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
             install: true
           - platform: [watchOS, 9]
             runtime: watchOS 9.4
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
             install: true
           - platform: [watchOS, 10]
             runtime: watchOS 10.5
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
+            install: true
           - platform: [watchOS, 11]
             runtime: watchOS 11.5
             os: macos-15
@@ -109,14 +112,10 @@ jobs:
           #   os: macos-15
           #   xcode: 26.0
 
-          - platform: [macOS, 14]
-            runtime: macOS 14
-            os: macos-14
-            xcode: 16.2
           - platform: [macOS, 15]
             runtime: macOS 15
             os: macos-15
-            xcode: 16.2
+            xcode: 16.4
           # - platform: [macOS, 26]
           #   runtime: macOS 26.0
           #   os: macos-15
@@ -124,8 +123,9 @@ jobs:
 
           - platform: [visionOS, 1]
             runtime: visionOS 1.2
-            os: macos-14
-            xcode: 16.2
+            os: macos-15
+            xcode: 16.4
+            install: true
           - platform: [visionOS, 2]
             runtime: visionOS 2.5
             os: macos-15
