--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           fetch-depth: 0 # required to be able to find Git tags
 
       - name: Select Xcode version
-        run: sudo xcodes select 16.4
+        run: xcodes select 16.4
 
       - name: Lint Podspec
         run: |
@@ -142,7 +142,7 @@ jobs:
         run: echo "SKIP_SLOW_FASTLANE_WARNING=1" >> $GITHUB_ENV
 
       - name: Select Xcode version
-        run: sudo xcodes select ${{ matrix.xcode }}
+        run: xcodes select ${{ matrix.xcode }}
 
       - if: ${{ matrix.install }}
         name: "[Debug] List Available Installable Runtimes"
@@ -154,7 +154,7 @@ jobs:
         with:
           timeout_minutes: 15
           max_attempts: 3
-          command: sudo xcodes runtimes install '${{ matrix.runtime }}'
+          command: xcodes runtimes install '${{ matrix.runtime }}'
 
       - name: "[Debug] List Available Runtimes, Simulators, and Destinations"
         run: |
@@ -172,3 +172,26 @@ jobs:
       - if: ${{ matrix.platform[0] != 'watchOS' }}
         name: Run Tests
         run: fastlane test platform:${{ matrix.platform[0] }} version:${{ matrix.platform[1] }} scheme:SwiftUIIntrospectTests configuration:Debug
+
+  framework-archiving:
+    name: Archive Framework
+    runs-on: macos-15
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [iOS, macOS, tvOS, watchOS, visionOS]
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v4
+
+      - name: Select Xcode version
+        run: xcodes select 16.4
+
+      - name: Archive Framework
+        run: |
+          xcodebuild archive \
+            -scheme "SwiftUIIntrospectTestFramework" \
+            -destination "generic/platform=${{ matrix.platform }}" \
+            -archivePath ./build/${{ matrix.platform }} \
+            SKIP_INSTALL=NO \
+            BUILD_LIBRARY_FOR_DISTRIBUTION=YES
