--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,6 +205,6 @@ jobs:
           xcodebuild archive \
             -scheme "SwiftUIIntrospectTestFramework" \
             -destination "generic/platform=${{ matrix.platform }}" \
-            -archivePath ./build/${{ matrix.platform }} \
+            -archivePath .build/archiving/${{ matrix.platform }} \
             SKIP_INSTALL=NO \
             BUILD_LIBRARY_FOR_DISTRIBUTION=YES
