--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,7 +204,7 @@ jobs:
         run: |
           xcodebuild archive \
             -scheme "SwiftUIIntrospectTestFramework" \
-            -destination "generic/platform=${{ matrix.platform }}" \
+            -destination "${{ matrix.destination }}" \
             -archivePath .build/archiving/${{ matrix.platform }} \
             SKIP_INSTALL=NO \
             BUILD_LIBRARY_FOR_DISTRIBUTION=YES
