--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
             runtime: iOS 18.6
             os: macos-15
             xcode: 26.0
-            install: true
+            install: false
           # - platform: [iOS, 26]
           #   runtime: iOS 26.0
           #   os: macos-15
@@ -84,7 +84,7 @@ jobs:
             runtime: tvOS 18.5
             os: macos-15
             xcode: 26.0
-            install: true
+            install: false
           # - platform: [tvOS, 26]
           #   runtime: tvOS 26.0
           #   os: macos-15
@@ -109,7 +109,7 @@ jobs:
             runtime: watchOS 11.5
             os: macos-15
             xcode: 26.0
-            install: true
+            install: false
           # - platform: [watchOS, 26]
           #   runtime: watchOS 26.0
           #   os: macos-15
@@ -133,7 +133,7 @@ jobs:
             runtime: visionOS 2.5
             os: macos-15
             xcode: 26.0
-            install: true
+            install: false
           # - platform: [visionOS, 26]
           #   runtime: visionOS 26.0
           #   os: macos-15
@@ -147,6 +147,14 @@ jobs:
 
       - name: Select Xcode version
         run: sudo xcodes select ${{ matrix.xcode }}
+
+      - name: Install 2026 platforms when Xcode 26 is selected
+        if: ${{ matrix.xcode == '26.0' }}
+        run: |
+          sudo xcodes runtimes install 'iOS 26.0'
+          sudo xcodes runtimes install 'tvOS 26.0'
+          sudo xcodes runtimes install 'watchOS 26.0'
+          sudo xcodes runtimes install 'visionOS 26.0'
 
       - if: ${{ matrix.install }}
         name: "[Debug] List Available Installable Runtimes"
