--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,13 @@ jobs:
       - name: Select Xcode version
         run: sudo xcodes select 16.4
 
+      - name: Install Runtimes
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 15
+          max_attempts: 3
+          command: xcodebuild -downloadAllPlatforms
+
       - name: Lint Podspec
         run: |
           set -eo pipefail
