--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,13 @@ jobs:
       - name: Select Xcode version
         run: sudo xcodes select 16.4
 
+      - name: Install Runtimes
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 15
+          max_attempts: 3
+          command: xcodebuild -downloadAllPlatforms
+
       - name: Lint Podspec
         run: |
           set -eo pipefail
@@ -43,22 +50,23 @@ jobs:
           - platform: [iOS, 15]
             runtime: iOS 15.5
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [iOS, 16]
             runtime: iOS 16.4
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [iOS, 17]
             runtime: iOS 17.5
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [iOS, 18]
-            runtime: iOS 18.5
+            runtime: iOS 18.6
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
+            install: false
           # - platform: [iOS, 26]
           #   runtime: iOS 26.0
           #   os: macos-15
@@ -67,22 +75,23 @@ jobs:
           - platform: [tvOS, 15]
             runtime: tvOS 15.4
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [tvOS, 16]
             runtime: tvOS 16.4
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [tvOS, 17]
             runtime: tvOS 17.5
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [tvOS, 18]
             runtime: tvOS 18.5
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
+            install: false
           # - platform: [tvOS, 26]
           #   runtime: tvOS 26.0
           #   os: macos-15
@@ -91,22 +100,23 @@ jobs:
           - platform: [watchOS, 8]
             runtime: watchOS 8.5
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [watchOS, 9]
             runtime: watchOS 9.4
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [watchOS, 10]
             runtime: watchOS 10.5
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [watchOS, 11]
             runtime: watchOS 11.5
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
+            install: false
           # - platform: [watchOS, 26]
           #   runtime: watchOS 26.0
           #   os: macos-15
@@ -115,7 +125,7 @@ jobs:
           - platform: [macOS, 15]
             runtime: macOS 15
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
           # - platform: [macOS, 26]
           #   runtime: macOS 26.0
           #   os: macos-15
@@ -124,12 +134,13 @@ jobs:
           - platform: [visionOS, 1]
             runtime: visionOS 1.2
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
             install: true
           - platform: [visionOS, 2]
             runtime: visionOS 2.5
             os: macos-15
-            xcode: 16.4
+            xcode: 26.0
+            install: false
           # - platform: [visionOS, 26]
           #   runtime: visionOS 26.0
           #   os: macos-15
@@ -141,8 +152,16 @@ jobs:
       - name: Set environment variables
         run: echo "SKIP_SLOW_FASTLANE_WARNING=1" >> $GITHUB_ENV
 
-      - name: Select Xcode version
+      - name: Select Xcode ${{ matrix.xcode }}
         run: sudo xcodes select ${{ matrix.xcode }}
+
+      - if: ${{ matrix.xcode == '26.0' && matrix.platform[0] != 'macOS' }}
+        name: Install 2026 Runtime
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 15
+          max_attempts: 3
+          command: xcodebuild -downloadPlatform ${{ matrix.platform[0] }}
 
       - if: ${{ matrix.install }}
         name: "[Debug] List Available Installable Runtimes"
