--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
             runtime: iOS 18.6
             os: macos-15
             xcode: 26.0
+            install: false
           - platform: [iOS, 26]
             runtime: iOS 26.0
             os: macos-15
@@ -90,6 +91,7 @@ jobs:
             runtime: tvOS 18.5
             os: macos-15
             xcode: 26.0
+            install: false
           - platform: [tvOS, 26]
             runtime: tvOS 26.0
             os: macos-15
@@ -114,6 +116,7 @@ jobs:
             runtime: watchOS 11.5
             os: macos-15
             xcode: 26.0
+            install: false
           - platform: [watchOS, 26]
             runtime: watchOS 26.0
             os: macos-15
@@ -137,6 +140,7 @@ jobs:
             runtime: visionOS 2.5
             os: macos-15
             xcode: 26.0
+            install: false
           - platform: [visionOS, 26]
             runtime: visionOS 26.0
             os: macos-15
