--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,7 @@ indent_style = tab
 trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = lf
+
+[*.{yml,json}]
+indent_style = space
+indent_size = 2
